RESOLVED FIXED171235
[macOS] Fix two minor issues with MediaSelectionOption::Type
https://bugs.webkit.org/show_bug.cgi?id=171235
Summary [macOS] Fix two minor issues with MediaSelectionOption::Type
Andy Estes
Reported 2017-04-24 11:44:16 PDT
[macOS] Fix two minor issues with MediaSelectionOption::Type
Attachments
Patch (1.88 KB, patch)
2017-04-24 11:45 PDT, Andy Estes
no flags
Patch (2.17 KB, patch)
2017-04-24 13:05 PDT, Andy Estes
no flags
Andy Estes
Comment 1 2017-04-24 11:45:51 PDT
Andy Estes
Comment 2 2017-04-24 13:05:23 PDT
WebKit Commit Bot
Comment 3 2017-04-24 14:33:08 PDT
Comment on attachment 308000 [details] Patch Clearing flags on attachment: 308000 Committed r215696: <http://trac.webkit.org/changeset/215696>
WebKit Commit Bot
Comment 4 2017-04-24 14:33:10 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.