[macOS] Fix two minor issues with MediaSelectionOption::Type https://bugs.webkit.org/show_bug.cgi?id=171235

Reviewed by Sam Weinig.

* platform/MediaSelectionOption.h: Gave type a default value, and added explicit
constructors to make gcc and msvc happy.
* platform/mac/WebPlaybackControlsManager.mm:
(toAVTouchBarMediaSelectionOptionType): Added an ASSERT_NOT_REACHED if none of the switch
cases match.


Canonical link: https://commits.webkit.org/188100@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215696 268f45cc-cd09-0410-ab3c-d52691b4dbfc